hotkeys no longer appear on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -51,3 +51,9 @@
   position: absolute;
   right: 15px;
 }
+
+@media screen and (max-width: 1100px) {
+  .non_mobile {
+    display: none
+  }
+}
